Disabling csrf protection provided by spring security so that the requests from angular continue to work.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,9 @@
         </div>
     </div>
 
-    <a href="/logoutbutton">Logout</a>
+    <form action="/logout" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
 
     <script type="text/ng-template" id="itemform.html">
     <div class="list-group-item row">
